# maestro-deck

./: .gitignore  .gitleaks.toml  CHANGELOG_EN.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  eslint.config.js  index.html  lefthook.yml  package.json  pnpm-lock.yaml  sonar-project.properties  tailwind.config.ts  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cla.yml  release.yml  tauri-build.yml
docs/: ARCHITECTURE.md  PLAN.md  physical-ios-setup.md  signing-distribution.md
docs/superpowers/plans/: 2026-04-23-landing-page.md  2026-04-23-performance-hud.md  2026-05-04-maestro-device-healthcheck.md  2026-05-04-maestro-driver-preflight.md  2026-05-04-maestro-studio-pause-around-tests.md  2026-05-04-run-from-here.md  2026-05-04-run-progress-indicators.md  2026-05-04-yaml-autosave.md  2026-06-29-screenshot-bank-regression.md  2026-07-08-image-bank-page-and-status-bar-mask.md
docs/superpowers/specs/: 2026-04-23-landing-page-design.md  2026-04-23-performance-hud-design.md  2026-04-24-device-screenshot-button-design.md  2026-04-24-nightly-test-runner-design.md  2026-05-04-maestro-device-healthcheck-design.md  2026-05-04-maestro-driver-preflight-design.md  2026-05-04-maestro-studio-pause-around-tests-design.md  2026-05-04-run-from-here-design.md  2026-05-04-run-progress-indicators-design.md  2026-05-04-yaml-autosave-design.md  2026-06-29-screenshot-bank-regression-design.md  2026-07-08-image-bank-page-and-status-bar-mask-design.md
scripts/: bump-version.mjs  check-busl-change-date.mjs  dev.sh  download-scrcpy.sh  notarize-dmg.sh  stage-release.sh
signatures/version1/: cla.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  clippy.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: avf_probe.rs  sck_smoke.rs  simfb_probe.rs  simfb_smoke.rs
src-tauri/icons/: README.md  icon.icns
src-tauri/resources/: README.md
src-tauri/src/: credentials.rs  env_shim.rs  error.rs  lib.rs  main.rs  process_ext.rs  state.rs  tool_paths.rs  vertex.rs  workspace.rs
src-tauri/src/avf_capture/: mod.rs
src-tauri/src/bank/: compare.rs  diff.rs  flow.rs  ipc.rs  mod.rs
src-tauri/src/device/: adb.rs  ios.rs  mod.rs  web.rs
src-tauri/src/hierarchy/: grpc_client.rs  ios.rs  mod.rs  proto.rs  studio.rs  web.rs
src-tauri/src/input/: ios.rs  mod.rs  web.rs
src-tauri/src/ios_capture/: mod.rs
src-tauri/src/ios_session/: mod.rs  preview.rs
src-tauri/src/ipc/: commands.rs  mod.rs
src-tauri/src/maestro_health/: detect.rs  kill.rs  mod.rs
src-tauri/src/metrics/: collector.rs  foreground.rs  ios_sim.rs  mod.rs  parsers.rs
src-tauri/src/runner/: mod.rs
src-tauri/src/scrcpy/: mod.rs  stream.rs
src-tauri/src/selector/: mod.rs
src-tauri/src/sim_capture/: mod.rs
src-tauri/src/video/: mod.rs
src-tauri/src/web_session/: mod.rs
src-tauri/src/yaml/: mod.rs
src-tauri/tests/fixtures/: devicectl_list.json  ios_hierarchy.json  settings_dump.xml  simctl_list.json
src/components/: AiSettings.tsx  BrandIcons.tsx  DeviceSelector.tsx  DeviceView.tsx  FlowEditor.tsx  HealthcheckModal.tsx  ImageBankPage.tsx  InspectActionMenu.tsx  InspectorPanel.tsx  Logo.tsx  MainView.tsx  MetricsPanel.tsx  MetricsSparkline.tsx  PanelShell.tsx  QuitConfirmDialog.tsx  RunConsole.tsx  ScreenshotReview.tsx  SettingsDialog.tsx  ToolPathsSettings.tsx  Toolbar.tsx  UpdateDialog.tsx  WorkspaceTree.tsx
src/components/chat/: ApplyDiffDialog.tsx  ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  CodeBlock.tsx  MessageList.tsx  ModelPicker.tsx
src/components/settings/: AboutSettings.tsx  BillySettings.tsx  DevicePerformanceSettings.tsx  GeneralSettings.tsx  PhysicalIosSetup.test.tsx  PhysicalIosSetup.tsx  SettingsPage.test.ts  SettingsPage.tsx  SettingsPrimitives.tsx  VisualRegressionSettings.tsx  sections.tsx
src/components/ui/: Button.tsx  ContextMenu.tsx  Dialog.tsx  DropdownMenu.tsx  ScrollArea.tsx  Separator.tsx  Switch.tsx  Toast.tsx  Tooltip.tsx
src/lib/: ansi.test.tsx  ansi.tsx  autosaveEngine.test.ts  autosaveEngine.ts  decoder.test.ts  decoder.ts  editor-theme.ts  flow-io.ts  flowAst.test.ts  flowAst.ts  ipc.ts  keyboard.ts  maestro-commands.json  metricsCards.test.ts  metricsCards.ts  partialFlow.test.ts  partialFlow.ts  runStepParser.test.ts  runStepParser.ts  stepRenderer.test.ts  stepRenderer.ts  theme.ts  useAutosave.ts  utils.test.ts  utils.ts  workspace-ops.test.ts  workspace-ops.ts
src/lib/chat/: AnthropicProvider.ts  VertexProvider.ts  billy-prompt.md  credentials.ts  models.generated.json  models.ts  provider.ts  registry.test.ts  registry.ts  sse.test.ts  sse.ts  systemPrompt.test.ts  systemPrompt.ts
src/stores/: billyPromptStore.test.ts  billyPromptStore.ts  chatStore.ts  deviceStore.ts  flowStore.ts  inspectorStore.ts  metricsStore.test.ts  metricsStore.ts  panelsStore.test.ts  panelsStore.ts  reviewStore.ts  runStore.test.ts  runStore.ts  settingsStore.test.ts  settingsStore.ts  streamStore.test.ts  streamStore.ts  toastStore.test.ts  toastStore.ts  updateStore.test.ts  updateStore.ts  visualRegressionStore.test.ts  visualRegressionStore.ts  workspaceStore.ts
src/styles/: globals.css
src/types/: chat.ts  env.d.ts  index.ts  visualRegression.ts
