[package]
name = "maestro-deck"
version = "0.1.0"
description = "Open-source visual IDE for Maestro mobile tests"
authors = ["Ethan Morisset <blueshork.dev@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/blueshork/maestro-deck"
edition = "2021"
rust-version = "1.77"

[lib]
name = "maestro_deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["devtools"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"

# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# XML parsing for UIAutomator dumps
quick-xml = { version = "0.36", features = ["serialize"] }

# Spatial index
rstar = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# USB device detection
rusb = "0.9"

# Utilities
once_cell = "1.20"
parking_lot = "0.12"
bytes = "1.8"
hex = "0.4"

# YAML for Maestro flow generation
serde_yaml = "0.9"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# Native-only deps go here

[dev-dependencies]
tempfile = "3.13"
pretty_assertions = "1.4"
mockall = "0.13"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Enable real H.264 hardware decoding (requires ffmpeg-next or openh264-sys2 system deps)
hwdecode = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
